# MysticSMP

./: bot.py  counting.py  help.py  help_commands.py  invite-tracker.py  invite_tracker.py  level.py  main.py  verify.py  webcog.py  welcome_messages.py
BotCompanion/: BOT_PANEL_ANLEITUNG.md  app.py  bot.py  bot_assistant.json  bot_panel_api.py  captcha_settings.json  config.json  content_announcer.json  counting.json  discord_bot_anleitung.md  download_info.txt  economy.json  keep_alive.py  levels.json  main.py  moderation.json  packages_list.txt  pyproject.toml  self_roles.json  server_stats.json  temp_voice.json  tickets.json  translations.json  user_languages.json  zip_me.py
BotCompanion/cogs/: admin_commands.py  bot_assistant.py  captcha_verification.py  channel_locker.py  content_announcer.py  counting_game.py  economy.py  emoji_stealer.py  help_commands.py  language_settings.py  level_system.py  moderation.py  music_player.py  self_roles.py  self_roles_new.py  server_stats.py  setup_commands.py  temp_voice.py  ticket_system.py  verification.py  welcome_messages.py
BotCompanion/replit_agent/: architecture.md
BotCompanion/static/css/: style.css
BotCompanion/static/js/: main.js
BotCompanion/templates/: 404.html  500.html  base.html  dashboard.html  download.html  download_textual.html  economy.html  guild_dashboard.html  index.html  login.html  register.html  server_selection.html  simple_download.html  text_download.html  welcome.html
BotCompanion/utils/: config_manager.py  embed_creator.py  image_creator.py  language_manager.py
